--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
     <body>
         <header>
             <nav>
-                <p><a href = "./index.html" id = "c">Home</a></p>
-                <p><a href = "./history.html">History</a></p>
-                <p><a href = "./types.html">Types of Swords</a></p>
-                <p><a href = "./making.html">Making a Sword</a></p>
-                <p><a href = "./feedback.html">Feedback</a></p>
+                <p><a href = "./index.html" id = "c" tabindex="1">Home</a></p>
+                <p><a href = "./history.html" tabindex="2">History</a></p>
+                <p><a href = "./types.html" tabindex="3">Types of Swords</a></p>
+                <p><a href = "./making.html" tabindex="4">Making a Sword</a></p>
+                <p><a href = "./feedback.html" tabindex="5">Feedback</a></p>
             </nav>
             <h1>The World of the Sword</h1>
             <h2>Welcome one and all!</h2>
             <h3 id = "printer">WHY ARE YOU PRINTING THIS???</h3>
         </header>
-        <main id = "index">
+        <main id = "index" tabindex="6">
             <p>Many millenia ago the first human picked up a stick and used it to establish a tribe, becoming its leader. A sharp stone was used to hunt, gradually evolving into the first sword, a weapon that started shaping the world. From stone to bronze, iron to steel, the sword evolved, becoming better at the task of defending and attacking tribes and empires. This weapon is paramount to the existance of today's world and will forever be prominant in our culture.</p>
             <br>
-            <p>The World of the Sword will guide you through the <a href = "./history.html">history</a> of swords from the dawn of humanity to modern days, including a timeline of famous swords.</p>
-            <p>If you are ever confused what type of swords exist, whether you need this for literary writings or intense D &amp; D gameplay, then head over to <a href = "./types.html">types of swords</a> page to clear all confusions and aquire inspirations</p>
-            <p>Ever were interested in the process of making a sword? The blacksmithing, the honing, etc? While <a href = "./making.html">the making</a> page will not delve too deeply into the processes, it will help with the basics and then lead you on to more indepth sources.</p>
-            <p>Of course and and all <a href = ".feedback.html">feedback</a> on this site is greatly appreciated!</p>
+            <p>The World of the Sword will guide you through the <a href = "./history.html" tabindex="7">history</a> of swords from the dawn of humanity to modern days, including a timeline of famous swords.</p>
+            <p>If you are ever confused what type of swords exist, whether you need this for literary writings or intense D &amp; D gameplay, then head over to <a href = "./types.html" tabindex="8">types of swords</a> page to clear all confusions and aquire inspirations</p>
+            <p>Ever were interested in the process of making a sword? The blacksmithing, the honing, etc? While <a href = "./making.html" tabindex="9">the making</a> page will not delve too deeply into the processes, it will help with the basics and then lead you on to more indepth sources.</p>
+            <p>Of course and and all <a href = ".feedback.html" tabindex="10">feedback</a> on this site is greatly appreciated!</p>
         </main>
-        <footer>
+        <footer tabindex="11">
             <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
             <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
-            <p>Choose a font below, style the page yourself! (Affects: This page only)</p>
+            <p>Choose a font below, style the page yourself! (Affects: This page only. Use with caution!)</p>
             <ul>
                 <li id = "creepy">Creepy Font</li>
                 <li id = "hand">Handwriting Font</li>
