--- a/types.html
+++ b/types.html
@@ -13,86 +13,86 @@
     <body>
         <header>
             <nav>
-                <p><a href = "./index.html">Home</a></p>
-                <p><a href = "./history.html">History</a></p>
-                <p><a href = "./types.html" id = "c">Types of Swords</a></p>
-                <p><a href = "./making.html">Making a Sword</a></p>
-                <p><a href = "./feedback.html">Feedback</a></p>
+                <p><a href = "./index.html" tabindex="1">Home</a></p>
+                <p><a href = "./history.html" tabindex="2">History</a></p>
+                <p><a href = "./types.html" id = "c" tabindex="3">Types of Swords</a></p>
+                <p><a href = "./making.html" tabindex="4">Making a Sword</a></p>
+                <p><a href = "./feedback.html" tabindex="5">Feedback</a></p>
             </nav>
             <h1>Types of Swords</h1>
             <h2>Confused what the different types of swords are?</h2>
             <h3 id = "printer">WHY ARE YOU PRINTING THIS???</h3>
         </header>
-        <main>
+        <main tabindex="6">
             <div id = "manytypes" class = "typ">
                 <img src = "images/types.jpg" alt = "image to show the different types of swords" />
             </div>
             <div class = "typ">
-                <h3>Machete and Falchion</h3>
+                <h3 tabindex="7">Machete and Falchion</h3>
                 <img src = "images/machete.jpg" alt = "machete" />
                 <p>The machete is exactly a sword, more of a tool to cut a path through jungles. It has evolved from the european falchion. Both have a rather short blade and only one edge. Is rather bulky to add momentum to the swing to cut through thicker vines.</p>
             </div>
             <div class = "typ">
-                <h3>Gladius and Shortsword</h3>
+                <h3 tabindex="8">Gladius and Shortsword</h3>
                 <img src = "images/shortsword.gif" alt = "shortsword" />
                 <p>Gladius is the Roman sword, carried by all legionaries. The shortsword is the evolution of a gladius, but carries the same characteristics. Both have straight edges and a point, useful in close combat between many people.</p>
             </div>
             <div class = "typ">
-                <h3>Broadsword</h3>
+                <h3 tabindex="9">Broadsword</h3>
                 <img src = "images/broadsword.jpg" alt = "broadsword" />
                 <p>A longer version of a gladius, this weapon was the most common throughout history. A medium-long straight blade with two edges and a moderatly sharp point, this weapon was used more for slicing than stabbing. Most foot soldiers carried these for many centuries.</p>
             </div>
             <div class = "typ">
-                <h3>Saber and Cutlass</h3>
+                <h3 tabindex="10">Saber and Cutlass</h3>
                 <img src = "images/saber.jpg" alt = "saber" />
                 <p>The saber was an eastern addition to the European battlefield, most mounted warriors preferring a single edge and a stronger blade back to fight. It is generally thicker than a broadsword, needing to support stronger blows. Most sabers had a sharp point for stabbing purposes.</p>
                 <p>The cutlass could be categorised as a mutated saber, also being single edged. However, it was wider and thinner than its cousin, and was thus preferred for naval battles by pirates.</p>
             </div>
             <div class = "typ">
-                <h3>Longsword and Claymore</h3>
+                <h3 tabindex="11">Longsword and Claymore</h3>
                 <img src = "images/claymore.jpg" alt = "claymore" />
                 <p>As funny as it seems, the longsword is indeed a long sword, a longer version of the broadsword, while the claymore is the longsword's Scottish cousin. Since it is longer, it had to be made thinner, otherwise most soldiers would not be able to swing it efficiently. Having two edges, it did not have a sharp point due to the weight of the sword. It was generally wielded with two hands, rather than one, thus making the bearer more vunerable.</p>
             </div>
             <div class = "typ">
-                <h3>Flamberge and Zweihander</h3>
+                <h3 tabindex="12">Flamberge and Zweihander</h3>
                 <img src = "images/zweihander.jpg" alt = "zweihander" />
                 <p>Zweihander means two handed in german, so naturally it was swung with both hands. Both weapons were very large and very heavu, meaning only the strongest warriors could use them for hours in battle. They did not have a sharp point, and the edges were not very sharp, as the swing of the blade was fatal regardless of the edge sharpness. However, due to its weight, the wielders could not battle for a long time, so it was rarely seen.</p>
             </div>
             <div class = "typ">
-                <h3>Dao and Dadao</h3>
+                <h3 tabindex="13">Dao and Dadao</h3>
                 <img src = "images/dao.jpg" alt = "dao sword" />
                 <p>The Dadao is a two handed version of the Dao, a Chinese single edged sword, similar to the European cutlass. It is very difficult to say which came first, but one has influenced the other.</p>
             </div>
             <div class = "typ">
-                <h3>Katana and Wakizashi</h3>
+                <h3 tabindex="14">Katana and Wakizashi</h3>
                 <img src = "images/katana.jpg" alt = "katana and wakizashi set" />
                 <p>These samurai swords are well known throughout the world. Always coming in a set, they were the main weapons of Japanese warriors. Single edged and bearing a slight curve, they are similar looking to the sabers of Europe, but the making peocess for them was very different to the one used by European smiths.</p>
             </div>
             <div class = "typ">
-                <h3>Jian and Ninjato</h3>
+                <h3 tabindex="15">Jian and Ninjato</h3>
                 <img src = "images/ninjato.jpg" alt = "ninjato" />
                 <p>Both of these swords are similarly straight, but posess a single cutting edge, as well as a sharp point. However, while the Chinese jian was a noble sword, the Japanese ninjato was favoured by ninjas for stealth missions.</p>
             </div>
             <div class = "typ">
-                <h3>Nodachi / Odachi</h3>
+                <h3 tabindex="16">Nodachi / Odachi</h3>
                 <img src = "images/nodachi.jpg" alt = "nodachi" />
                 <p>A nodachi is to a katana, as a dadao is to dao. It is a large katana, weilded with two hands only and never was considered part of a set. Was not common on the battlefield for the same reasons as a flamberge.</p>
             </div>
             <div class = "typ">
-                <h3>Hook sword and Sword Breaker</h3>
+                <h3 tabindex="17">Hook sword and Sword Breaker</h3>
                 <img src = "images/hook.jpg" alt = "hook sword" />
                 <p>Initially part of the Chinese armoury, this weapon has several cousins that perform similar functions, like the sword breaker. Having several sharpened edges from the hooks to the sharp pommel, these kinds of weapons were used to trap opponents, sometimes even disarming them.</p>
             </div>
             <div class = "typ">
-                <h3>Shamshir and Scimitar</h3>
+                <h3 tabindex="18">Shamshir and Scimitar</h3>
                 <img src = "images/scimitar.jpg" alt = "scimitar" />
                 <p>The Middle Eastern version of a saber, it has a well defined curve and a single cutting edge that forms a sharp point at the end. The main difference from a saber is the bend. It is much more pronounced and makes the blade look much longer than it actually is.</p>
             </div>
         </main>
-        <footer>
+        <footer tabindex="19">
                 <p>All images used are the property of their respective owners. The site is &copy; to Mark Bobrovnikov, 2018 <a href = "https://www.facebook.com/markthebob" target="_blank" aria-label = "facebook link"><i class="fab fa-facebook-square"></i></a>
                 <a href = "https://www.twitch.tv/markthebob" target="_blank" aria-label = "twitch link"><i class="fab fa-twitch"></i></a></p>
-                <p>Choose a font below, style the page yourself! (Affects: This page only)</p>
+                <p>Choose a font below, style the page yourself! (Affects: This page only. Use with caution!)</p>
                 <ul>
                     <li id = "creepy">Creepy Font</li>
                     <li id = "hand">Handwriting Font</li>
